--- a/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
@@ -207,11 +207,11 @@
                  orderId_ok: parseInt(OrderId),
              }
      })
-            .done(function (data) {
-                console.log(data);
-                alert("確定出餐");
+            //.done(function (data) {
+            //    console.log(data);
+            //    alert("確定出餐");
                 
-            })
+            //})
 
      }
 
