--- a/task03_0606/Views/Products/ManagerIndex.cshtml
+++ b/task03_0606/Views/Products/ManagerIndex.cshtml
@@ -1,5 +1,4 @@
 ﻿@model  List<task03_0606.Models.FoodProduct>
-
 @{
     ViewBag.Title = "ManagerIndex";
 }
@@ -21,7 +20,10 @@
                 </button>
             </div>
             <div class="card-body">
-                <div class="table-responsive">
+                @*@Html.DropDownListFor(c => c , new { @class = "form-control ", id = "PageSize" })*@
+                <div class="table-responsive"><label>店家名稱<select name="dataTable_length" aria-controls="dataTable" class="form-control form-control-sm"><option value="所有產品">所有產品</option><option value="麥當勞">麥當勞</option><option value="八坂丼飯">八坂丼飯</option><option value="亞頓鐵板燒">亞頓鐵板燒</option><option value="壽賀喜屋">壽賀喜屋</option>
+                                                             <option value="花月嵐拉麵">花月嵐拉麵</option><option value="燒丼株式會社">燒丼株式會社</option><option value="湄南河料理">湄南河料理</option><option value="三田製麵所">三田製麵所</option></select></label></div>
+
                     <table class="table table-bordered" id="dataTable" width="140%" cellspacing="0">
                         <thead>
                             <tr>
