訂單明細單項出餐 OK

--- a/task03_0606/Views/Home/RestaurentMemberPage.cshtml
+++ b/task03_0606/Views/Home/RestaurentMemberPage.cshtml
@@ -150,7 +150,7 @@
                 <img id="itemImg" class="col-sm-12" src='/photo/E1.jpg' />
                 <br />
                 <p id="itemDescription">炸雞外皮脆薄、雞肉多汁，與其說是美式炸雞，更像古早味街邊巷口賣的薄皮炸雞。</p>
-                <p id="itemId"></p>
+                <p style="display:none" id="itemId"></p>
             </div>
             <div class="modal-footer">
 
