--- a/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
@@ -195,7 +195,7 @@
      //訂單出餐
      function foodDelivery(ProductID,OrderId) {
 
-        // alert("訂單編號:" + OrderId + "  " + "產品編號" + ProductID)
+         alert("訂單編號:" + OrderId + "  " + "產品編號" + ProductID)
 
          $.ajax({
              method: "post",
@@ -207,11 +207,13 @@
                  orderId_ok: parseInt(OrderId),
              }
      })
-            //.done(function (data) {
-            //    console.log(data);
-            //    alert("確定出餐");
+            .done(function (data) {
+                alert("確定出餐 訂單編號:" + OrderId + "的" + "產品編號" + ProductID)
+                window.location.reload();
+                //console.log(data);
                 
-            //})
+                
+            })
 
      }
 
